ref #506 Remove docker Min/MaxHeapFreeRatio (issue with some config)